Add Apple IAP 21007/21008 fallback handling with detailed logging

--- a/Back-end/.env.example
+++ b/Back-end/.env.example
@@ -39,6 +39,9 @@ AI_SERVICE_URL=http://ai-service:3001
 STRIPE_SECRET_KEY=your_stripe_secret_key_here
 STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
 
+# Apple In-App Purchase
+APPLE_SHARED_SECRET=your_apple_shared_secret_here
+
 # CORS
 CORS_ORIGIN=https://your-app-domain.com
 FRONTEND_URL=https://your-app-domain.com
